move datacamp material out of eda and into playground folder

--- a/eda-and-visualization/eda_and_visualization.ipynb
+++ b/eda-and-visualization/eda_and_visualization.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "# Exploratory Data Analysis and Visualization (in Python)\n",
     "\n",
-    "**NOTE: this is an early work in progress. Check back shortly for new additions.**\n",
-    "\n",
-    "As I work through the Python DataCamp, this notebook will likely become my go-to location for writing up disparate snippets of code that I find useful and interesting but don't yet have a permanent home for in one of [my other data-science-tool-specific folders]('https://github.com/pmaji/data-science-toolkit'), but once I have finished the coursework and have had time to give the organization of this document more thought, it will more closely resemble the [other markdowns that I have up on GitHub]('https://github.com/pmaji/data-science-toolkit/blob/master/classification/logit/logistic_regression.md') that are much more neatly organized.\n",
-    "\n",
-    "The counterpart to this notebook--written in R--can [be found here]('https://github.com/pmaji/data-science-toolkit/blob/master/eda-and-visualization/eda_and_visualization.md'). "
+    "**NOTE: this is an early work in progress. Check back shortly for new additions.**"
    ]
   },
   {
@@ -19,12 +15,16 @@
    "source": [
     "## Introduction \n",
     "\n",
-    "The purpose of this document is to serve as a smorgasbord of EDA techniques and visualization tools in python. "
+    "The purpose of this document is to serve as a smorgasbord of EDA techniques and visualization tools. \n",
+    "\n",
+    "Once I have had some time to more thoroughly flesh out this document, it will more closely resemble the [other markdowns that I have up on GitHub]('https://github.com/pmaji/data-science-toolkit/blob/master/classification/logit/logistic_regression.md') that are much more neatly organized.\n",
+    "\n",
+    "The counterpart to this notebook--written in R--can [be found here]('https://github.com/pmaji/data-science-toolkit/blob/master/eda-and-visualization/eda_and_visualization.md'). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
