add edits to main pydata conference notes

--- a/conferences/py_data_dc_2018/pydata_conference_notes.ipynb
+++ b/conferences/py_data_dc_2018/pydata_conference_notes.ipynb
@@ -7,9 +7,11 @@
     "# PyData DC Conference\n",
     "Friday November 16th, 2018\n",
     "\n",
-    "Hi there! The notes below are my scribblings from my time at the 2018 DC PyData Conference, hosted at Capital One's HQ in McLean, VA. There were 4 timeslots for sessions peppered throughout the day, with 2 sessions from which to choose during each timeslot. As such, I was only able to attend 4/8 total sessions. For the complete schedule (so you can see what I missed) check out the [full schedule for the day here](https://pydata.org/dc2018/schedule/). \n",
+    "Hi there! The notes below are my scribblings from my time at the Friday tutorial portion of the [2018 DC PyData Conference,](https://pydata.org/dc2018/) hosted at Capital One's HQ in McLean, VA. There were 4 timeslots for sessions peppered throughout the day, with 2 sessions from which to choose during each timeslot. As such, I was only able to attend 4/8 total sessions. For the complete schedule (so you can see what I missed) check out the [full schedule for the day here](https://pydata.org/dc2018/schedule/). If you are reading this and you were able to attend some of the sessions not covered below, feel free to reach out via the Issues tab above so that any notes you took may can be itegrated as well. \n",
     "\n",
-    "I recommend reading this write-up about the conference once-through and then jumping to the different notebooks, files, and folders I mention throughout for more information about particular sessions."
+    "I recommend reading this write-up about the conference once-through, and thereafter jumping to the different notebooks, files, and folders I mention throughout for more information about particular sessions. In some cases, the particular session came with a notebook pre-populated with all the code needed to follow along, whereas in other cases, the code was all done on the fly. In either case, I include links to all pertinent content under the corresponding subsections below, and in many cases have added my own alterations / notes to the content presented. This is almost always to clarify something in the code, fix a problem that came up during the live demo, or simply take note of something helpful that was said during the session but not included in the code or mentioned in the comments (if any were provided). \n",
+    "\n",
+    "All credit goes the original presenters--it was a great conference--enjoy!"
    ]
   },
   {
@@ -38,7 +40,11 @@
     "4. Test \n",
     "    - Build a model and see how it does.\n",
     "5. Accept that \"done\" is better than perfect\n",
-    "\n"
+    "\n",
+    "This session was the only session during which I did not add to any of the pre-packaged code, as we just ran through two notebooks that were already complete and commented. As such, there is no difference between my cloned versions of the notebooks, and those under Joseph's aforementioned GitHub. That said, links to both are provided for convenience below.\n",
+    "\n",
+    "- [notebook that covers the bayesian stats portion of the election forecast](https://github.com/pmaji/data-science-toolkit/blob/master/conferences/py_data_dc_2018/elections_forecast_538/bayes-walkthrough.ipynb)\n",
+    "- [notebook that covers that viz and Bokeh app used to display election results](https://github.com/pmaji/data-science-toolkit/blob/master/conferences/py_data_dc_2018/elections_forecast_538/senate_dashboard.ipynb)"
    ]
   },
   {
@@ -64,9 +70,9 @@
     "        - Makes use of user feedback (either explicit or implicit)\n",
     "        - Using a user feedback score (dwell time, frequency of interactions)\n",
     "    - Content-based Filtering:\n",
-    "        - Kinda like hedonic regression. Includes user features and item features (gender, age, etc.)\n",
+    "        - Kind of like hedonic regression. Includes user features and item features (gender, age, etc.)\n",
     "\n",
-    "Turn to the Jupyter notebook that have included here for the rest of the content and notes. It is almost identical to the version presented by Jill the day of the presentation, with a few small changes / additions to handle for an error that came up during the live code walkthrough. "
+    "Turn to [the Jupyter notebook that have included here](https://github.com/pmaji/data-science-toolkit/blob/master/conferences/py_data_dc_2018/building_recommender_system/tutorial.ipynb) for the rest of the content and notes. It is almost identical to the version presented by Jill the day of the presentation, with a few small changes / additions to handle for an error that came up during the live code walkthrough. "
    ]
   },
   {
@@ -78,9 +84,11 @@
     "    \n",
     "### Notes\n",
     "\n",
-    "This talk did not come with a pre-prepared notebook, but there was a notes handout [which can be found here.](https://pydata.org/dc2018/schedule/presentation/37/) The GitHub repo that contains all of the [initial data and code can be found here](https://github.com/chendaniely/pydatadc_2018-tidy). \n",
+    "This talk did not come with a pre-prepared notebook, but there was a notes handout [which can be found here.](https://pydata.org/dc2018/schedule/presentation/37/) \n",
     "\n",
-    "Check out the Jupyter Notebook that I used to follow along with Daniel's live coding here, which includes some call-outs  for useful functions or best practices when using pandas that might not be immediately intuitive."
+    "The GitHub repo that contains all of the [initial data and code can be found here](https://github.com/chendaniely/pydatadc_2018-tidy). \n",
+    "\n",
+    "Check out the [Jupyter Notebook that I used to follow along with Daniel's live coding here](https://github.com/pmaji/data-science-toolkit/blob/master/conferences/py_data_dc_2018/tidy_data/notebooks/live_code_walkthrough.ipynb), which includes some call-outs  for useful functions and best practices when using pandas that might not be immediately intuitive."
    ]
   },
   {
@@ -92,15 +100,10 @@
     "    \n",
     "### Notes\n",
     "\n",
-    "The code for the talk as well as her full presentation can be [found on Monica's GitHub here](https://github.com/monipip3/wwcdc/tree/master/webscraping). The code on her GitHub is located in 2 .py files, but during her live presentation, I coded up a jupyter notebook equivalent, which can be found here for anyone interested. "
+    "The code for the talk as well as her full presentation can be [found on Monica's GitHub here](https://github.com/monipip3/wwcdc/tree/master/webscraping). \n",
+    "\n",
+    "The code on her GitHub is located in 2 .py files, but during her live presentation, I coded up a jupyter notebook equivalent with some additional commentary, [which can be found here for anyone interested](https://github.com/pmaji/data-science-toolkit/blob/master/conferences/py_data_dc_2018/webscraping_beautiful_soup/beautiful_soup_scraping_demo.ipynb). "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
