added notes and links based on pycon2016 talk

--- a/hypothesis-tests/hacker_statistics.ipynb
+++ b/hypothesis-tests/hacker_statistics.ipynb
@@ -5,7 +5,21 @@
    "metadata": {},
    "source": [
     "# Hacker Statistics\n",
-    "by: Paul Jeffries\n"
+    "by: Paul Jeffries\n",
+    "\n",
+    "This code was adapted in large part from this DataCamp course in the Python Data Scientist track, but was inspired mostly by [Jake Vanderplas' excellent PyCon 2016 talk--Statistics for Hackers](https://www.youtube.com/watch?v=Iq9DzN6mvYA). In his talk, which I highly recommend to anyone not familiar with what is meant by \"hacker statistics,\" Jake dives into the \"four recipes for hacking statistics\":\n",
+    "\n",
+    "Note: All of these methods assume independent and identically distributed data, and sometimes dependence can be really subtle--so be careful with this!\n",
+    "\n",
+    "1. Direct Simulation\n",
+    "    - Great if we have an *a priori* understanding of the underlying generating model for the data and we can similuate that process end-to-end (like checking to see if a coin is a fair coin).\n",
+    "2. Shuffling\n",
+    "    - Great if we don't have an understanding of the underlying generating model for the data and we want to compare one group to another group (like checking differences in test scores between two groups). \n",
+    "3. Bootsrapping\n",
+    "    - Also great if we don't have an understanding of the underlying generating model for the data and we want to better understand some statistic for a population (like trying to establish a confidence interval around a mean).\n",
+    "    - Works poorly with low sample sizes (N > 20 as good rule of thumb) or with cases where the target statistic is rank-based (like maximum value). \n",
+    "4. Cross Validation\n",
+    "    - Most often used with machine learning & model-building because it's useful for cases/models where you can't really examine / compare the statistical distribution of the results. \n"
    ]
   },
   {
@@ -17,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last Updated On:  2018-11-21\n"
+      "Last Updated On:  2018-11-22\n"
      ]
     }
    ],
