add link for referenced DataCamp course

--- a/hypothesis-tests/hacker_statistics.ipynb
+++ b/hypothesis-tests/hacker_statistics.ipynb
@@ -7,7 +7,7 @@
     "# Hacker Statistics\n",
     "by: Paul Jeffries\n",
     "\n",
-    "This code was adapted in large part from this DataCamp course in the Python Data Scientist track, but was inspired mostly by [Jake Vanderplas' excellent PyCon 2016 talk--Statistics for Hackers](https://www.youtube.com/watch?v=Iq9DzN6mvYA). In his talk, which I highly recommend to anyone not familiar with what is meant by \"hacker statistics,\" Jake dives into the \"four recipes for hacking statistics\":\n",
+    "This code was adapted in large part from [this DataCamp course in the Python Data Scientist track](https://www.datacamp.com/courses/statistical-thinking-in-python-part-2), but was inspired mostly by [Jake Vanderplas' excellent PyCon 2016 talk--Statistics for Hackers](https://www.youtube.com/watch?v=Iq9DzN6mvYA). In his talk, which I highly recommend to anyone not familiar with what is meant by \"hacker statistics,\" Jake dives into the \"four recipes for hacking statistics\":\n",
     "\n",
     "Note: All of these methods assume independent and identically distributed data, and sometimes dependence can be really subtle--so be careful with this!\n",
     "\n",
