update title to specify linear regression

--- a/regression/linear_regression.ipynb
+++ b/regression/linear_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression in Python\n",
+    "# Linear Regression in Python\n",
     "\n",
     "Work in progress regression vignette in Python using data from the WHO.\n",
     "\n",
