change datetime log format

--- a/utilities/html_file_appender_bs4.ipynb
+++ b/utilities/html_file_appender_bs4.ipynb
@@ -19,31 +19,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook was late run:  2019-01-15 22:36:15.189550\n"
+     ]
+    }
+   ],
    "source": [
-    "# needed packages\n",
-    "from bs4 import BeautifulSoup\n",
-    "import copy\n",
-    "import glob\n",
-    "import datetime"
+    "import datetime\n",
+    "# prints the present date and time as a form of log\n",
+    "print(\"This notebook was late run: \", datetime.datetime.now())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This notebook was late run:  2019-01-14 18:27:37.970619\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# prints the present date and time as a form of log\n",
-    "print(\"This notebook was late run: \", datetime.datetime.now())"
+    "# needed packages\n",
+    "from bs4 import BeautifulSoup\n",
+    "import copy\n",
+    "import glob"
    ]
   },
   {
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['html_example_file1.html', 'html_example_file2.html.html']\n"
+      "['html_example_file1.html', 'html_example_file2.html.html', 'test_html_master_file.html']\n"
      ]
     }
    ],
@@ -78,7 +78,8 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1\n"
+      "1\n",
+      "2\n"
      ]
     }
    ],
