add new df helper to eda code

--- a/eda-and-visualization/eda_and_visualization.ipynb
+++ b/eda-and-visualization/eda_and_visualization.ipynb
@@ -23,28 +23,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world. My name is Paul and this is my test space for EDA in python.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# everyone's gotta have a hello world right? I'll delete this shortly but for now it stays.\n",
-    "print(\"Hello world. My name is Paul and this is my test space for EDA in python.\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup \n",
+    "## Setup \n",
     "\n",
     "To enable toggle-able table of contents (with button to enable / disable), check out [this link here]('https://github.com/minrk/ipython_extensions') for instructions on how to get set up. "
    ]
@@ -52,43 +34,64 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# key libraries\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/pauljeffries/Desktop/personal/personal_code/data_science_toolkit\n"
+      "This notebook was late run:  2019-01-16 11:23:15.523001\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "# prints the present date and time as a form of log\n",
+    "print(\"This notebook was late run: \", datetime.datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# key libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/pauljeffries/Desktop/personal/personal_code/data-science-toolkit-master\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'/Users/pauljeffries/Desktop/personal/personal_code/data_science_toolkit'"
+       "'/Users/pauljeffries/Desktop/personal/personal_code/data-science-toolkit-master'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# cd to correct directory \n",
-    "%cd '/Users/pauljeffries/Desktop/personal/personal_code/data_science_toolkit' \n",
+    "%cd '/Users/pauljeffries/Desktop/personal/personal_code/data-science-toolkit-master' \n",
     "# print working directory just be sure\n",
-    "%pwd  "
+    "%pwd"
    ]
   },
   {
@@ -104,24 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -270,25 +273,212 @@
        "4            1283.0       19500.00  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# importing the dataset from the CSV\n",
-    "base_df = pd.read_csv(filepath_or_buffer = './hypothesis_tests/data/ks-projects-201801.csv')\n",
+    "base_df = pd.read_csv(filepath_or_buffer = 'hypothesis-tests/data/ks-projects-201801.csv')\n",
     "\n",
     "# print the head of the base dataframe\n",
     "base_df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# building a helpful function to look get info on the columns in our data frame\n",
+    "def dataframe_explorer(df):\n",
+    "    dict_list = []\n",
+    "    for col in df.columns:\n",
+    "        data = df[col]\n",
+    "        dict_ = {}\n",
+    "        # pulls the null count for a column\n",
+    "        dict_.update({'null_count' : data.isnull().sum()})\n",
+    "        # counts the unique values in a column\n",
+    "        dict_.update({'unique_count' : len(data.unique())})\n",
+    "        # gets the types of the data in a column\n",
+    "        dict_.update({'data_type' : data.dtype})\n",
+    "        dict_list.append(dict_)\n",
+    "            \n",
+    "    col_info_df = pd.DataFrame(dict_list)\n",
+    "    col_info_df.index = df.columns\n",
+    "    col_info_df.sort_values(by=['null_count','unique_count'], ascending=[True, False], inplace=True)\n",
+    "        \n",
+    "    return col_info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_type</th>\n",
+       "      <th>null_count</th>\n",
+       "      <th>unique_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>378661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>launched</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>378089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>usd_pledged_real</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>106065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pledged</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>usd_goal_real</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>goal</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>backers</th>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>deadline</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>category</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>main_category</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>currency</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <td>object</td>\n",
+       "      <td>4</td>\n",
+       "      <td>375765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>usd pledged</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>3797</td>\n",
+       "      <td>95456</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 data_type  null_count  unique_count\n",
+       "ID                   int64           0        378661\n",
+       "launched            object           0        378089\n",
+       "usd_pledged_real   float64           0        106065\n",
+       "pledged            float64           0         62130\n",
+       "usd_goal_real      float64           0         50339\n",
+       "goal               float64           0          8353\n",
+       "backers              int64           0          3963\n",
+       "deadline            object           0          3164\n",
+       "category            object           0           159\n",
+       "country             object           0            23\n",
+       "main_category       object           0            15\n",
+       "currency            object           0            14\n",
+       "state               object           0             6\n",
+       "name                object           4        375765\n",
+       "usd pledged        float64        3797         95456"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking out our data with the the dataframe explorer\n",
+    "dataframe_explorer(base_df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
