add two new section to eda ipynb and add janitor functions

--- a/eda-and-visualization/eda_and_visualization.ipynb
+++ b/eda-and-visualization/eda_and_visualization.ipynb
@@ -290,7 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring the Data"
+    "### Preliminary Data Exploration\n",
+    "\n",
+    "I emphasize *preliminary* here because, when doing EDA, I prefer to explore the data in two parts. The first stage--the preliminary stage--involves just enough exploration to facilitate basic data cleaning. At this stage things like looking for null values, type cohesion, etc., is te focus. The second stage--the deeper exploration stage--presumes that our data are clean, and then we can being more nuanced EDA like exploring data distributions, correlations, etc."
    ]
   },
   {
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +355,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ID</th>\n",
+       "      <th>id</th>\n",
        "      <td>int64</td>\n",
        "      <td>0</td>\n",
        "      <td>378661</td>\n",
@@ -437,7 +439,7 @@
        "      <td>375765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>usd pledged</th>\n",
+       "      <th>usd_pledged</th>\n",
        "      <td>float64</td>\n",
        "      <td>3797</td>\n",
        "      <td>95456</td>\n",
@@ -448,7 +450,7 @@
       ],
       "text/plain": [
        "                 data_type  null_count  unique_count\n",
-       "ID                   int64           0        378661\n",
+       "id                   int64           0        378661\n",
        "launched            object           0        378089\n",
        "usd_pledged_real   float64           0        106065\n",
        "pledged            float64           0         62130\n",
@@ -462,10 +464,10 @@
        "currency            object           0            14\n",
        "state               object           0             6\n",
        "name                object           4        375765\n",
-       "usd pledged        float64        3797         95456"
+       "usd_pledged        float64        3797         95456"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,11 +478,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning the Data\n",
+    "\n",
+    "We'll start by making use of some of the [excellent functions provided by the janitor package](https://github.com/ericmjl/pyjanitor) to clean up column names and remove any entirely empty rows. In the case of this data, which came already very clean (a rare treat!), it doesn't have a large effect on our df. If we didn't already now that our data were so clean, it would be wise to re-run the dataframe_explorer() function from above on the cleaned data below, in addition to spot-checking with .head() / .tail()."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from janitor import clean_names, remove_empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>main_category</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>deadline</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>launched</th>\n",
+       "      <th>pledged</th>\n",
+       "      <th>state</th>\n",
+       "      <th>backers</th>\n",
+       "      <th>country</th>\n",
+       "      <th>usd_pledged</th>\n",
+       "      <th>usd_pledged_real</th>\n",
+       "      <th>usd_goal_real</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000002330</td>\n",
+       "      <td>The Songs of Adelaide &amp; Abullah</td>\n",
+       "      <td>Poetry</td>\n",
+       "      <td>Publishing</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>2015-10-09</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2015-08-11 12:12:28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1533.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000003930</td>\n",
+       "      <td>Greeting From Earth: ZGAC Arts Capsule For ET</td>\n",
+       "      <td>Narrative Film</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2017-11-01</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>2017-09-02 04:43:57</td>\n",
+       "      <td>2421.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>15</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2421.0</td>\n",
+       "      <td>30000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000004038</td>\n",
+       "      <td>Where is Hank?</td>\n",
+       "      <td>Narrative Film</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2013-02-26</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>2013-01-12 00:20:50</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>3</td>\n",
+       "      <td>US</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>45000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000007540</td>\n",
+       "      <td>ToshiCapital Rekordz Needs Help to Complete Album</td>\n",
+       "      <td>Music</td>\n",
+       "      <td>Music</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2012-04-16</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>2012-03-17 03:24:11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000011046</td>\n",
+       "      <td>Community Film Project: The Art of Neighborhoo...</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2015-08-29</td>\n",
+       "      <td>19500.0</td>\n",
+       "      <td>2015-07-04 08:35:03</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>14</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>19500.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                                               name  \\\n",
+       "0  1000002330                    The Songs of Adelaide & Abullah   \n",
+       "1  1000003930      Greeting From Earth: ZGAC Arts Capsule For ET   \n",
+       "2  1000004038                                     Where is Hank?   \n",
+       "3  1000007540  ToshiCapital Rekordz Needs Help to Complete Album   \n",
+       "4  1000011046  Community Film Project: The Art of Neighborhoo...   \n",
+       "\n",
+       "         category main_category currency    deadline     goal  \\\n",
+       "0          Poetry    Publishing      GBP  2015-10-09   1000.0   \n",
+       "1  Narrative Film  Film & Video      USD  2017-11-01  30000.0   \n",
+       "2  Narrative Film  Film & Video      USD  2013-02-26  45000.0   \n",
+       "3           Music         Music      USD  2012-04-16   5000.0   \n",
+       "4    Film & Video  Film & Video      USD  2015-08-29  19500.0   \n",
+       "\n",
+       "              launched  pledged     state  backers country  usd_pledged  \\\n",
+       "0  2015-08-11 12:12:28      0.0    failed        0      GB          0.0   \n",
+       "1  2017-09-02 04:43:57   2421.0    failed       15      US        100.0   \n",
+       "2  2013-01-12 00:20:50    220.0    failed        3      US        220.0   \n",
+       "3  2012-03-17 03:24:11      1.0    failed        1      US          1.0   \n",
+       "4  2015-07-04 08:35:03   1283.0  canceled       14      US       1283.0   \n",
+       "\n",
+       "   usd_pledged_real  usd_goal_real  \n",
+       "0               0.0        1533.95  \n",
+       "1            2421.0       30000.00  \n",
+       "2             220.0       45000.00  \n",
+       "3               1.0        5000.00  \n",
+       "4            1283.0       19500.00  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_base_df = (base_df\n",
+    "          .clean_names(strip_underscores=True)\n",
+    "          .remove_empty()\n",
+    "     ) # further method chaining possible\n",
+    "\n",
+    "clean_base_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary Statistics\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### High-level summary stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bespoke Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Histograms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Density Plots"
+   ]
   }
  ],
  "metadata": {
