fix typo in map tooltip and upload new html file

--- a/eda-and-visualization/geo_mapping_viz.ipynb
+++ b/eda-and-visualization/geo_mapping_viz.ipynb
@@ -771,11 +771,11 @@
     "\n",
     "# editing the text to display in the tooltip\n",
     "gdp_perc_state_df['text'] = gdp_perc_state_df['GeoName'] + \" made up \" +\\\n",
-    "    gdp_perc_state_df['2017'].astype(str) + \"% of US GDP in 2017, ranking at a position \" +\\\n",
+    "    gdp_perc_state_df['2017'].astype(str) + \"% of US GDP in 2017, ranking at position \" +\\\n",
     "    gdp_perc_state_df['rank'].astype(str) + \" in terms of % contribution to US GPD.\"\n",
     "\n",
     "# final check on structure of data\n",
-    "gdp_perc_state_df"
+    "gdp_perc_state_df.head()"
    ]
   },
   {
